hphp/hack/test/typecheck/goto/goto_from_finally.php
<?hh // partial

function gotoFromWithinFinally($condition): void {
  try {
  } finally {
    goto L0;
  }

  L0:
}
